<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/spotify_description"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/play_pause_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/play_pause_button" />

    <Button
        android:id="@+id/next_song_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/next_song_button" />
</LinearLayout>
